--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.4.1",
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.1",
     "ejs": "^3.1.10",
