--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,9 @@
     ],
     "routes": [
       { "src": "/(.*)", "dest": "server.js" }
-    ]
+    ],
+    "env": {
+      "NODE_ENV": "production"
+    }
   }
   
