--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@vercel/analytics": "^1.4.1",
     "body-parser": "^1.20.3",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.1",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
+    "express-session": "^1.17.3",
     "multer": "^1.4.5-lts.1",
     "replicate": "^1.0.1"
   }
